--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angularfire2": "^5.0.0-rc.12",
     "firebase": "^5.4.2",
     "ionic-angular": "3.9.2",
+    "ionic-selectable": "^3.0.3",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
